fix: overflow on photo-grid content area

--- a/blocks/photo-grid/__heart-icon/photo-grid__heart-icon.css
+++ b/blocks/photo-grid/__heart-icon/photo-grid__heart-icon.css
@@ -4,6 +4,7 @@
  background-image: url(../../../images/heart.svg);
  border: none;
  background-color: transparent;
+ padding:0;
 }
 
 .photo-grid__heart-icon:hover{
